# lattice

./: README.md  pyproject.toml
src/datacenter_orchestrator/agent/: engine.py  mcp_client.py  mcp_server.py  runner.py
src/datacenter_orchestrator/core/: serialization.py  types.py
src/datacenter_orchestrator/fabric/: capacity.py  external_policy.py  graph.py
src/datacenter_orchestrator/inventory/: store.py
src/datacenter_orchestrator/inventory/plugins/: git.py  netbox.py  static.py
src/datacenter_orchestrator/mcp/: security.py
src/datacenter_orchestrator/planner/: __init__.py  planner.py  rollback.py  verification.py
tests/: test_capacity.py  test_execution_mock.py  test_external_policy.py  test_graph.py  test_inventory_store.py  test_runner_static_sources.py
